--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 h1 {text-align: center;}
 form {width: 300px; margin: 0 auto;}
-form input, form textarea, form button {width: 100%; margin: 5px;}
+form input, form textarea, form button, form a {width: 100%; margin: 5px;}
+form a {text-align: center; display: block;}
 .div_events {display: inline;}
 .div_events div{display: inline-block;}
 .div_event {height: 150px; width:150px; border: 1px solid black; float: left; margin: 10px;}
 .div_event > div {display: block; text-align: center; margin: 8px;}
 .event_title {font-weight: bold;}
+#user_menu {padding-top: 20px; float:right;}
+#user_menu a {cursor: pointer;}
